--- a/dvc.yaml
+++ b/dvc.yaml
@@ -44,3 +44,10 @@ stages:
     - reports/metrics.json
     - reports/xgboost_metrics.json
 
+params:
+- dvclive/params.yaml
+metrics:
+- dvclive/metrics.json
+plots:
+- dvclive/plots/metrics:
+    x: step
